# charlie-renderer

./: Cargo.toml  LICENSE  README.md
shaders/: triangle.vert
src/: dyn_result.rs  main.rs  renderer.rs
