[package]
name = "charlie-renderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.35.0", default-features = false, features = ["linked", "debug"] }
ash-window = "0.9.0"
vk-shader-macros = "0.2.7"
winit = "0.26.0"
